Start JBoss AS if it's not running...
git-svn-id: http://anonsvn.jboss.org/repos/weld/ri/trunk@1504 1c488680-804c-0410-94cd-c6b725194a0e